Fix: menu overlaping scrollbar

--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -2887,7 +2887,7 @@ tbody.collapse.show {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 0;
   display: none;
   float: left;
   min-width: 10rem;
